# LearnAndroid

./: .gitignore  README.md
01_NDK/01_NDK_C/: DummyJNI.cpp  JniTest.h  run.sh
01_NDK/02_NDK_JNI/day01/: Demo01AccessJavaField.cpp  Demo01AccessJavaField.h  Demo01AccessJavaField.java  libDemo01AccessJavaField.dylib  run.sh
01_NDK/03_NDK_CPP/: dm01_inherit  dm01_inherit.cpp  run.sh
01_NDK/day01/: DummyJNI  DummyJNI.c  DummyJNICpp  JniTest.cpp  JniTest.java
01_NDK_C/day01/: JniTest.c  libJniTest.dylib
LightWeightAnimationEngine/: settings.gradle
LightWeightAnimationEngine/app/: build.gradle
LightWeightAnimationEngine/app/src/main/cpp/: CMakeLists.txt  templateApp.cpp  templateApp.h
LightWeightAnimationEngine/app/src/main/cpp/ch0203/: templateApp.cpp  templateApp.h
LightWeightAnimationEngine/app/src/main/cpp/ch0304/: templateApp.cpp  templateApp.h
LightWeightAnimationEngine/app/src/main/cpp/ch0405/: templateApp.cpp  templateApp.h
LightWeightAnimationEngine/app/src/main/cpp/dm0203/: templateApp.cpp  templateApp.h
LightWeightAnimationEngine/app/src/main/cpp/dm0304/: templateApp.cpp  templateApp.h
LightWeightAnimationEngine/app/src/main/cpp/dm0405/: templateApp.cpp  templateApp.h
LightWeightAnimationEngine/distribution/gfx/: gfx.h
LightWeightAnimationEngine/gen-lib/: build.gradle
LightWeightAnimationEngine/gen-lib/src/main/cpp/: CMakeLists.txt
LightWeightAnimationEngine/gen-lib/src/main/cpp/gfx/: CMakeLists.txt  audio.cpp  audio.h  font.cpp  font.h  gfx.cpp  gfx.h  light.cpp  light.h  matrix.cpp  matrix.h  md5.cpp  md5.h  memory.cpp  memory.h  navigation.cpp  navigation.h  obj.cpp  obj.h  program.cpp  program.h  shader.cpp  shader.h  sound.cpp  sound.h  texture.cpp  texture.h  thread.cpp  thread.h  types.h  utils.cpp  utils.h  vector.cpp  vector.h
LightWeightAnimationEngine/gen-lib/src/main/cpp/gfx/nvtristrip/: VertexCache.cpp
LightWeightAnimationEngine/gen-lib/src/main/cpp/openal/: CMakeLists.txt
LightWeightAnimationEngine/gradle/wrapper/: gradle-wrapper.properties
android-openGL-canvas/: build.gradle
open_lib/: build_android.sh  make_standalone_toolchain.sh
open_lib/ffmpeg/: build_android.sh
open_lib/ffmpeg/ffmpeg-4.1/: config.h  configure
project/AndroidNdkBeginnerGuide/app/: build.gradle
project/AndroidNdkBeginnerGuide/app/src/main/cpp/: CMakeLists.txt  mylog.h  native-lib.cpp
project/AndroidNdkBeginnerGuide/app/src/main/cpp/dm04BasicJNI/: Store.cpp  Store.h  com_packtpub_store_Store.cpp
project/AndroidNdkBeginnerGuide/app/src/main/cpp/dm05LiveCamera/: CameraDecoder.c
project/Asynchronous-Android-Programming-master/: build.gradle
project/Asynchronous-Android-Programming-master/app/: build.gradle
project/Asynchronous-Android-Programming-master/chapter1/: build.gradle
project/Asynchronous-Android-Programming-master/chapter10/: build.gradle  google-services.json
project/Asynchronous-Android-Programming-master/chapter11/: build.gradle
project/Asynchronous-Android-Programming-master/chapter12/: build.gradle
project/Asynchronous-Android-Programming-master/chapter2/: build.gradle
project/Asynchronous-Android-Programming-master/chapter3/: build.gradle
project/Asynchronous-Android-Programming-master/chapter5/: build.gradle
project/Asynchronous-Android-Programming-master/chapter6/: build.gradle
project/Asynchronous-Android-Programming-master/chapter7/: build.gradle
project/Asynchronous-Android-Programming-master/chapter8/: build.gradle
project/Asynchronous-Android-Programming-master/chapter9/: build.gradle
project/Asynchronous-Android-Programming-master/chapter9/src/main/jni/: CMakeLists.txt  thread.cpp
project/AudioVideoPlayerSample/: .gitignore  build.gradle
project/AudioVideoPlayerSample/app/: build.gradle
project/AudioVideoPlayerSample/app/src/main/cpp/: AVNative-lib.cpp  CMakeLists.txt  h264_soft_decoder.cpp  h264_soft_decoder.h  mini_yuv_decoder.cpp  my_log.c
project/AudioVideoPlayerSample/app/src/main/cpp/include/: FDK_audio.h  aacdecoder_lib.h  lame.h  machine_type.h  my_log.h  x264.h  x264_config.h
project/AudioVideoPlayerSample/app/src/main/cpp/include/libavcodec/: avcodec.h
project/AudioVideoPlayerSample/app/src/main/cpp/include/libavfilter/: version.h
project/AudioVideoPlayerSample/app/src/main/cpp/include/libavformat/: avformat.h  url.h
project/AudioVideoPlayerSample/app/src/main/cpp/include/libavutil/: common.h  ffversion.h  opt.h  pixfmt.h
project/AudioVideoPlayerSample/app/src/main/cpp/include/librtmp/: rtmp.h
project/VideoDecoderAndRender/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
project/VideoDecoderAndRender/app/src/main/cpp/demo/dm01/: Square.cpp  Triangle.cpp  TwoDG1.cpp
project/VideoDecoderAndRender/app/src/main/cpp/demo/dm02/: Cube.cpp  CubeG2.cpp  matrix.cpp
project/VideoDecoderAndRender/app/src/main/cpp/demo/dm03/: Cube.cpp  EGLDemo.cpp  OldRenderMethods.cpp  Renderer.cpp
project/VideoDecoderAndRender/app/src/main/cpp/demo/dm04/: Cube.cpp  DiceG1.cpp
project/VideoDecoderAndRender/app/src/main/cpp/include/dm01/: TwoDG1.h
project/VideoDecoderAndRender/app/src/main/cpp/include/dm02/: CubeG2.h
project/VideoDecoderAndRender/app/src/main/cpp/include/dm03/: Cube.h  EGLDemo.h
project/VideoDecoderAndRender/app/src/main/cpp/include/dm04/: Cube.h  DiceG1.h
project/test_java_thread/: Test.h  Test.java
project/testffmpeg/app/src/main/cpp/: CMakeLists.txt  ffmpeg_player.c  my_log.c  native-lib.cpp
project/testffmpeg/app/src/main/cpp/demo/: avio_dir_cmd.c  avio_dir_cmd.h  avio_reading.c  avio_reading.h  decode_audio.c  decode_video.c  decode_video.h  demuxing_decoding.c  extract_mvs.c  filtering_audio.c  filtering_video.c  hw_decode.c  qsvdec.c  transcode_aac.c  transcoding.c  vaapi_transcode.c
project/testffmpeg/app/src/main/cpp/include/: ffmpeg_player.h  my_log.h
project/testffmpeg/app/src/main/cpp/include/libavcodec/: avcodec.h
tcp-ratecontrol/: main.cpp  rctcpsocket.cpp  rctcpsocket.h  rctcpsocket.pro
test_cmake/: CMakeLists_2.txt  CmakeLists.txt  build.sh  simple.c  simple.cpp
test_cmake/include/: method.c  method.h
(+337 files in other folders)
